@@ -54,7 +54,7 @@
                 <form id="enquiryForm">
                 <label>Enquiry Type:</label>
                 <div class="enquiry-type">
-                    <label><input type="radio" name="type" value="Volunteering" > Volunteering</label>
+                    <label><input type="radio" name="type" value="Training" > Training</label>
                     <label><input type="radio" name="type" value="Sponsorship"> Sponsorship</label>
                     <label><input type="radio" name="type" value="Products"> Products</label>
                     <label><input type="radio" name="type" value="Services"> Services</label>
@@ -75,7 +75,7 @@
                 </form>
 
                 <div class="success-message" id="successMessage">
-                ✅ Thank you! Your enquiry has been submitted.
+                Thank you! Your enquiry has been submitted.
                 </div>
             </div>
             </section>
